PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-8_erreur_same_var_declared/gcc-compile.txt
input.c:2:11: error: redefinition of 'x'
    int x,x;
          ^
input.c:2:9: note: previous definition is here
    int x,x;
        ^
1 error generated.

return code: 1
